--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Jane Doe</h1>
-      <p>Web Developer & Designer</p>
+      <h1>Mark Muthii</h1>
+      <p>Software Engineer</p>
     </header>
 
     <nav>
